# Skyline

./: CMakeLists.txt  LICENSE  README.md
CMake/: FindGLFW3.cmake
Example/: CMakeLists.txt  Example.cpp
Examples/: CMakeLists.txt  Main.cpp
Include/Sk/Context/: Context.hpp  Window.hpp
Include/Sk/Math/: Float.hpp  Matrix.hpp  Numeric.hpp  Rotation.hpp  Transform.hpp  Transforms.hpp  Translation.hpp  Vector.hpp  Vector2.hpp
Include/Sk/Rendering/: Device.hpp  Instance.hpp  PhysicalDevice.hpp  Surface.hpp
Include/SkMath/: Matrix.hpp  Rotation.hpp  Scaling.hpp  Vector.hpp
Includes/: SkCommons.h
Includes/Math/: SkMatrix2.c  SkMatrix2.h  SkMatrix3.h  SkVector2.h  SkVector3.c  SkVector3.h
Includes/Sk/: Matrix2.hpp
Includes/Sk/Math/: SkMatrix2.h  SkMatrix3.h  SkVector2.h  SkVector3.h  Vector2.hpp
Includes/SkMath/: Matrix2.hpp  Matrix3.hpp  Rotation.hpp  Scale.hpp  Translation.hpp  Vector2.hpp  Vector3.hpp
Libraries/: CMakeLists.txt
Source/: CMakeLists.txt  Matrix2.cpp  Matrix3.cpp  Rotation.cpp  Scale.cpp  SkMatrix3.c  SkVector2.c  SkVector3.c  Translation.cpp  Vector2.cpp  Vector3.cpp
Source/Context/: Context.cpp  Window.cpp
Source/Math/: Float.cpp  Matrix.cpp  Matrix2.cpp  Rotation.cpp  SkMatrix2.c  SkMatrix3.c  SkVector2.c  SkVector3.c  Transform.cpp  Translation.cpp  Vector.cpp  Vector2.cpp
Source/Rendering/: Device.cpp  Instance.cpp  PhysicalDevice.cpp  Surface.cpp
Sources/: CMakeLists.txt
Sources/Math/: Vector2.cpp
Test/: CMakeLists.txt  Main.cpp
